// Vitest Snapshot v1

exports[`Encode v37 payload > Empty payload 1`] = `
Uint8Array [
  0,
  151,
  0,
  192,
  192,
  192,
  192,
  147,
  0,
  196,
  32,
  37,
  24,
  107,
  68,
  172,
  164,
  154,
  121,
  183,
  73,
  187,
  141,
  195,
  163,
  156,
  92,
  95,
  227,
  139,
  13,
  32,
  34,
  85,
  183,
  66,
  37,
  141,
  87,
  77,
  99,
  121,
  161,
  196,
  16,
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  196,
  5,
  0,
  1,
  2,
  3,
  4,
]
`;

exports[`Encode v37 payload > Empty payload parsed 1`] = `
{
  "author": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "authorPublicKey": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "encrypted": OkImpl {
    "err": false,
    "ok": true,
    "val": Uint8Array [
      0,
      1,
      2,
      3,
      4,
    ],
  },
  "encryption": OkImpl {
    "err": false,
    "ok": true,
    "val": {
      "AESKey": OkImpl {
        "err": false,
        "ok": true,
        "val": CryptoKey {
          Symbol(kKeyObject): SecretKeyObject {
            Symbol(kKeyType): "secret",
          },
          Symbol(kAlgorithm): {
            "length": 256,
            "name": "AES-GCM",
          },
          Symbol(kExtractable): true,
          Symbol(kKeyUsages): [
            "encrypt",
            "decrypt",
          ],
        },
      },
      "iv": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
        ],
      },
      "type": "public",
    },
  },
  "signature": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "version": -37,
}
`;

exports[`Encode v37 payload > Full payload 1`] = `
Uint8Array [
  0,
  151,
  0,
  169,
  108,
  111,
  99,
  97,
  108,
  104,
  111,
  115,
  116,
  167,
  117,
  110,
  107,
  110,
  111,
  119,
  110,
  2,
  196,
  33,
  2,
  175,
  219,
  85,
  96,
  10,
  190,
  135,
  73,
  185,
  68,
  70,
  147,
  119,
  167,
  140,
  77,
  96,
  82,
  43,
  182,
  72,
  66,
  204,
  240,
  130,
  10,
  34,
  83,
  70,
  168,
  229,
  140,
  148,
  1,
  196,
  6,
  5,
  6,
  7,
  8,
  9,
  10,
  196,
  16,
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  129,
  161,
  50,
  196,
  33,
  2,
  175,
  219,
  85,
  96,
  10,
  190,
  135,
  73,
  185,
  68,
  70,
  147,
  119,
  167,
  140,
  77,
  96,
  82,
  43,
  182,
  72,
  66,
  204,
  240,
  130,
  10,
  34,
  83,
  70,
  168,
  229,
  140,
  196,
  5,
  0,
  1,
  2,
  3,
  4,
]
`;

exports[`Encode v37 payload > Full payload parsed 1`] = `
{
  "author": OkImpl {
    "err": false,
    "ok": true,
    "val": SomeImpl {
      "none": false,
      "some": true,
      "val": ProfileIdentifier {
        "network": "localhost",
        "userId": "unknown",
      },
    },
  },
  "authorPublicKey": OkImpl {
    "err": false,
    "ok": true,
    "val": SomeImpl {
      "none": false,
      "some": true,
      "val": {
        "algr": 2,
        "key": CryptoKey {},
      },
    },
  },
  "encrypted": OkImpl {
    "err": false,
    "ok": true,
    "val": Uint8Array [
      0,
      1,
      2,
      3,
      4,
    ],
  },
  "encryption": OkImpl {
    "err": false,
    "ok": true,
    "val": {
      "ephemeralPublicKey": {
        "2": OkImpl {
          "err": false,
          "ok": true,
          "val": {
            "algr": 2,
            "key": CryptoKey {},
          },
        },
      },
      "iv": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
        ],
      },
      "ownersAESKeyEncrypted": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          5,
          6,
          7,
          8,
          9,
          10,
        ],
      },
      "type": "E2E",
    },
  },
  "signature": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "version": -37,
}
`;

exports[`Encode v37 payload: Empty payload 1`] = `Uint8Array [ 009700c0c0c0c09300c42025186b44aca49a79b749bb8dc3a39c5c5fe38b0d202255b742258d574d6379a1c410000102030405060708090a0b0c0d0e0fc4050001020304 ]`;

exports[`Encode v37 payload: Empty payload parsed 1`] = `
Object {
  "author": Ok(None),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ 0001020304 ]),
  "encryption": Ok(Object {
    "AESKey": Ok(CryptoKey { [opaque crypto key material] }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`Encode v37 payload: Full payload 1`] = `Uint8Array [ 009700a96c6f63616c686f7374a7756e6b6e6f776e02c42102afdb55600abe8749b944469377a78c4d60522bb64842ccf0820a225346a8e58c9401c40605060708090ac410000102030405060708090a0b0c0d0e0f81a132c42102afdb55600abe8749b944469377a78c4d60522bb64842ccf0820a225346a8e58cc4050001020304 ]`;

exports[`Encode v37 payload: Full payload parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "unknown",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 0001020304 ]),
  "encryption": Ok(Object {
    "ephemeralPublicKey": Object {
      "2": Ok(Object {
        "algr": 2,
        "key": CryptoKey { [opaque crypto key material] },
      }),
    },
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "ownersAESKeyEncrypted": Ok(Uint8Array [ 05060708090a ]),
    "type": "E2E",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;
